fix responsiveness and background overflow for .services-text-div in services.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,7 @@ nav a{
     height:288px;
 }
 
-.services-image-row .col-4{
+.services-image-row .col-lg-4{
     height:100%;
     padding:12px;
 }
@@ -167,10 +167,14 @@ nav a{
     overflow: hidden;
 }
 
+.services-text-div h2, .services-text-div p{
+    margin: 0;
+}
+
 .services-text-div{
     position: relative;
-    margin-top: -144px;
-    height: 144px;
+    top: -60%;
+    height: 60%;
 }
 
 /*-----contact.html-----*/
@@ -207,7 +211,7 @@ input[type=submit]{
 .google-maps iframe{
     width: 100%;
     height: 210px;
-    border: none;
+    border: 0;
 }    
 
 /*-----footer-----*/
